--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: art
 spec:
+  progressDeadlineSeconds: 1200
   replicas: 1
   selector:
     matchLabels:
@@ -16,7 +17,6 @@ spec:
     spec:
       containers:
         - name: art-web
-          #image: localhost:32000/pvsdoc/art:v1
           image: ghcr.io/vitaliy-pvs/art:latest
           ports:
             - containerPort: 80
