--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,11 +1,20 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: art-service
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 195.58.54.98
 spec:
-  selector:
-    pod: art-container
-  ports:
-  - protocol: TCP
-    port: 80
-  type: ClusterIP
+  type: LoadBalancer
+
+#kind: Service
+#apiVersion: v1
+#metadata:
+#  name: art-service
+#spec:
+#  selector:
+#    pod: art-container
+#  ports:
+#  - protocol: TCP
+#    port: 80
+#  type: ClusterIP
