--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,25 +1,27 @@
-apiVersion: v1
+# --- MetallB-LoadBalancer ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: art-service
+#   annotations:
+#     metallb.universe.tf/loadBalancerIPs: 195.58.54.98
+# spec:
+#   type: LoadBalancer
+#   selector:
+#     pod: art-container
+#   ports:
+#   - protocol: TCP
+#     port: 443
+
+# --- ClusterIP ---
 kind: Service
+apiVersion: v1
 metadata:
   name: art-service
-  annotations:
-    metallb.universe.tf/loadBalancerIPs: 195.58.54.98
 spec:
-  type: LoadBalancer
   selector:
     pod: art-container
   ports:
   - protocol: TCP
     port: 443
-
-#kind: Service
-#apiVersion: v1
-#metadata:
-#  name: art-service
-#spec:
-#  selector:
-#    pod: art-container
-#  ports:
-#  - protocol: TCP
-#    port: 80
-#  type: ClusterIP
+  type: ClusterIP
