--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -1,14 +1,38 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: art-ingress
   annotations:
-    kubernetes.io/ingress.class: "traefik"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   rules:
-  - http:
+  - host: vitaliypryhodko.site
+    http:
       paths:
-      - path: /
-        backend:
-          serviceName: art-service
-          servicePort: 443
+      - backend:
+          service:
+            name: art-service
+            port:
+              number: 443
+        path: /
+        pathType: Prefix
+  tls:
+  - hosts:
+    - vitaliypryhodko.site
+    secretName: letsencrypt-prod
+
+
+#apiVersion: networking.k8s.io/v1beta1
+#kind: Ingress
+#metadata:
+#  name: art-ingress
+#  annotations:
+#    kubernetes.io/ingress.class: "traefik"
+#spec:
+#  rules:
+#  - http:
+#      paths:
+#      - path: /
+#        backend:
+#          serviceName: art-service
+#          servicePort: 443
