--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -4,58 +4,58 @@ on: push
 
 jobs:
 
-#  build:
-#    name: Build
-#    needs: test
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.repository_owner }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Build and push the Docker image
-#        uses: docker/build-push-action@v3
-#        with:
-#          push: true
-#          tags: |
-#            ghcr.io/vitaliy-pvs/art:latest
-#            ghcr.io/vitaliy-pvs/art:${{ github.sha }}
-#          cache-from: type=gha
-#          cache-to: type=gha,mode=max
-#
-#  deploy:
-#    name: Deploy
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Set the Kubernetes context
-#        uses: azure/k8s-set-context@v2
-#        with:
-#          method: service-account
-#          k8s-url: https://195.58.54.98:6443/
-#          k8s-secret: ${{ secrets.KUBERNETES_SECRET }}
-#
-#      - name: Checkout source code
-#        uses: actions/checkout@v3
-#
-#      - name: Deploy to the Kubernetes cluster
-#        uses: azure/k8s-deploy@v1
-#        with:
-#          namespace: default
-#          manifests: |
-#            kubernetes/deployment.yml
-#            kubernetes/service.yml
-#          images: |
-#            ghcr.io/vitaliy-pvs/art:${{ github.sha }}
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push the Docker image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: |
+            ghcr.io/vitaliy-pvs/art:latest
+            ghcr.io/vitaliy-pvs/art:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set the Kubernetes context
+        uses: azure/k8s-set-context@v2
+        with:
+          method: service-account
+          k8s-url: https://195.58.54.98:6443/
+          k8s-secret: ${{ secrets.KUBERNETES_SECRET }}
+
+      - name: Checkout source code
+        uses: actions/checkout@v3
+
+      - name: Deploy to the Kubernetes cluster
+        uses: azure/k8s-deploy@v1
+        with:
+          namespace: default
+          manifests: |
+            kubernetes/deployment.yml
+            kubernetes/service.yml
+          images: |
+            ghcr.io/vitaliy-pvs/art:${{ github.sha }}
 
   test:
     name: Test
+    needs: deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
