--- a/no.github/workflows/ci-cd.yaml
+++ b/no.github/workflows/ci-cd.yaml
@@ -70,4 +70,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run test
-        run: python tests/ui_test.py
+        run: python tests/test_func.py
