--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -5,7 +5,7 @@
 #metadata:
 #  name: art-service
 #  annotations:
-#    metallb.universe.tf/loadBalancerIPs: 195.58.54.98
+#    metallb.universe.tf/loadBalancerIPs: 37.230.116.88
 #spec:
 #  type: LoadBalancer
 #  selector:
@@ -17,31 +17,31 @@
 
 # --- ClusterIP ---
 
-#kind: Service
-#apiVersion: v1
-#metadata:
-#  name: art-service
-#spec:
-#  selector:
-#    pod: art-container
-#  ports:
-#    - protocol: TCP
-#      port: 80
-#  type: ClusterIP
+kind: Service
+apiVersion: v1
+metadata:
+  name: art-service
+spec:
+  selector:
+    pod: art-container
+  ports:
+    - protocol: TCP
+      port: 80
+  type: ClusterIP
 
 
 # --- NodePort ---
 
-  apiVersion: v1
-  kind: Service
-  metadata:
-    name: art-service
-  spec:
-    type: NodePort
-    selector:
-      pod: art-container
-    ports:
-      - port: 80
-        targetPort: 80
-        nodePort: 30003
-        protocol: TCP
+#  apiVersion: v1
+#  kind: Service
+#  metadata:
+#    name: art-service
+#  spec:
+#    type: NodePort
+#    selector:
+#      pod: art-container
+#    ports:
+#      - port: 80
+#        targetPort: 80
+#        nodePort: 30003
+#        protocol: TCP
